test/json1.l1.out
error: invalid json primitive: server
	#0                json2val	(builtin function)
	#1                   entry	(json1.l1:1)
